--- a/providers/teradata/provider.yaml
+++ b/providers/teradata/provider.yaml
@@ -53,11 +53,17 @@ operators:
     python-modules:
       - airflow.providers.teradata.operators.teradata
       - airflow.providers.teradata.operators.teradata_compute_cluster
+  - integration-name: Bteq
+    python-modules:
+      - airflow.providers.teradata.operators.bteq
 
 hooks:
   - integration-name: Teradata
     python-modules:
       - airflow.providers.teradata.hooks.teradata
+  - integration-name: Ttu
+    python-modules:
+      - airflow.providers.teradata.hooks.ttu
 
 transfers:
   - source-integration-name: Teradata
@@ -76,6 +82,8 @@ transfers:
 connection-types:
   - hook-class-name: airflow.providers.teradata.hooks.teradata.TeradataHook
     connection-type: teradata
+  - hook-class-name: airflow.providers.teradata.hooks.teradata.TtuHook
+    connection-type: ttu
 
 triggers:
   - integration-name: Teradata
