IDE-24616 Implement a new hook called BteqHook for bteq related methods

--- a/providers/teradata/provider.yaml
+++ b/providers/teradata/provider.yaml
@@ -64,6 +64,9 @@ hooks:
   - integration-name: Ttu
     python-modules:
       - airflow.providers.teradata.hooks.ttu
+  - integration-name: Bteq
+    python-modules:
+      - airflow.providers.teradata.hooks.bteq
 
 transfers:
   - source-integration-name: Teradata
