--- a/providers/teradata/provider.yaml
+++ b/providers/teradata/provider.yaml
@@ -57,11 +57,17 @@ operators:
     python-modules:
       - airflow.providers.teradata.operators.teradata
       - airflow.providers.teradata.operators.teradata_compute_cluster
+  - integration-name: Tpt
+    python-modules:
+      - airflow.providers.teradata.operators.tpt
 
 hooks:
   - integration-name: Teradata
     python-modules:
       - airflow.providers.teradata.hooks.teradata
+  - integration-name: Tpt
+    python-modules:
+      - airflow.providers.teradata.hooks.tpt
 
 transfers:
   - source-integration-name: Teradata
